@@ -1,12 +1,10 @@
 // SPDX-License-Identifier: LGPL-2.1-or-later
 // Copyright (c) 2012-2014 Monty Program Ab
 // Copyright (c) 2015-2023 MariaDB Corporation Ab
-
 package org.mariadb.jdbc.plugin.tls.main;
 
 import java.io.*;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.security.GeneralSecurityException;
 import java.security.KeyManagementException;
 import java.security.KeyStore;
@@ -45,11 +43,11 @@ public class DefaultTlsSocketPlugin implements TlsSocketPlugin {
         char[] keyStorePasswordChars =
             keyStorePassword == null
                 ? null
-                : (keyStorePassword == "") ? null : keyStorePassword.toCharArray();
+                : (keyStorePassword.equals("")) ? null : keyStorePassword.toCharArray();
         char[] keyStoreChars =
             (keyPassword == null)
                 ? keyStorePasswordChars
-                : (keyPassword == "") ? null : keyPassword.toCharArray();
+                : (keyPassword.equals("")) ? null : keyPassword.toCharArray();
         KeyStore ks =
             KeyStore.getInstance(storeType != null ? storeType : KeyStore.getDefaultType());
         ks.load(inStream, keyStorePasswordChars);
@@ -63,9 +61,26 @@ public class DefaultTlsSocketPlugin implements TlsSocketPlugin {
 
   private static InputStream loadFromUrl(String keyStoreUrl) throws FileNotFoundException {
     try {
-      return new URL(keyStoreUrl).openStream();
-    } catch (IOException ioexception) {
+      return new URI(keyStoreUrl).toURL().openStream();
+    } catch (Exception exception) {
       return new FileInputStream(keyStoreUrl);
+    }
+  }
+
+  private static InputStream getInputStreamFromPath(String path) throws IOException {
+    try {
+      return new URI(path).toURL().openStream();
+    } catch (Exception e) {
+      if (path.startsWith("-----")) {
+        return new ByteArrayInputStream(path.getBytes());
+      } else {
+        File f = new File(path);
+        if (f.exists() && !f.isDirectory()) {
+          return f.toURI().toURL().openStream();
+        }
+        throw new IOException(
+            String.format("File not found for option `serverSslCert` (value: '%s')", path), e);
+      }
     }
   }
 
@@ -174,23 +189,6 @@ public class DefaultTlsSocketPlugin implements TlsSocketPlugin {
     } catch (NoSuchAlgorithmException noSuchAlgorithmEx) {
       throw exceptionFactory.create(
           "SSLContext TLS Algorithm not unknown", "08000", noSuchAlgorithmEx);
-    }
-  }
-
-  private static InputStream getInputStreamFromPath(String path) throws IOException {
-    try {
-      return new URL(path).openStream();
-    } catch (MalformedURLException e) {
-      if (path.startsWith("-----")) {
-        return new ByteArrayInputStream(path.getBytes());
-      } else {
-        File f = new File(path);
-        if (f.exists() && !f.isDirectory()) {
-          return f.toURI().toURL().openStream();
-        }
-      }
-      throw new IOException(
-          String.format("Wrong value for option `serverSslCert` (value: '%s')", path), e);
     }
   }
 
